@@ -271,8 +271,11 @@ handler_t handlers[LAST_CODE + 1] = {
 	&code_trace_begin,
 	&code_unknown,
  	&code_xen_enter,
+#if !defined(__i386__) && !defined(__x86_64__)
 	&code_spu_profiling,
 	&code_spu_ctx_switch,
+#endif
+	&code_unknown,
 };
 
 extern void (*special_processor)(struct transient *);
