@@ -1,3 +1,12 @@
+2008-01-11  Isaku Yamahata  <yamahata@valinux.co.jp>
+
+	* daemon/opd_perfmon.c: Xen support for IA64
+
+2008-01-11  Markus Armbruster  <armbru@redhat.com>
+
+	* daemon/opd_interface.h:
+	* daemon/opd_trans.c: work around SPU/Xen code numbering problem
+
 2007-12-11  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/op_bfd.h: remove sym_offset(), we can get what did
